[gd_scene load_steps=7 format=2]

[ext_resource path="res://App_window.gd" type="Script" id=1]
[ext_resource path="res://PanelContainer.gd" type="Script" id=2]
[ext_resource path="res://Bibliothèque.gd" type="Script" id=3]
[ext_resource path="res://Creating3DArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://boutonAjout.png" type="Texture" id=5]
[ext_resource path="res://ObjectsTree.tscn" type="PackedScene" id=6]

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 42.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 9.88361, 6.63962 )
size_flags_horizontal = 2
size_flags_vertical = 3
text = "File"
flat = false
align = 0
items = [ "File", null, 0, false, false, -1, 0, null, "", false, "Project", null, 0, false, false, -1, 0, null, "", false, "", null, 0, false, true, -1, 0, null, "", true ]

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 28.0
margin_bottom = 27.0
size_flags_horizontal = 0
text = "A"

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainerLeft" type="VSplitContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 762.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft"]
margin_right = 762.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer"]
margin_right = 184.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Système de fichiers" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tree" type="Tree" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/TabContainer/Système de fichiers"]
margin_left = 7.0
margin_top = 7.0
margin_right = 169.0
margin_bottom = 372.0

[node name="Bibliothèque" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="Tree" type="Tree" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/TabContainer/Bibliothèque"]
margin_left = 7.0
margin_top = 7.0
margin_right = 169.0
margin_bottom = 372.0

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer"]
margin_left = 196.0
margin_right = 762.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/ViewportContainer"]
size = Vector2( 566, 415 )
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true
gui_snap_controls_to_pixels = false

[node name="CreatingArea" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 4 )]

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft"]
editor/display_folded = true
margin_top = 427.0
margin_right = 762.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainerLeft/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 755.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "--- Ouverture du projet : Application_Projet ---

########################################################
"

[node name="VBoxContainerRight" type="VSplitContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 774.0
margin_right = 1024.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ObjectTreeContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight"]
margin_right = 250.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/ObjectTreeContainer"]
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 5 )

[node name="ObjectTree" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/ObjectTreeContainer" instance=ExtResource( 6 )]
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 26.0
margin_right = 250.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight"]
margin_top = 287.0
margin_right = 250.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Proprietes" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes"]
margin_right = 242.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContainerName" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer"]
margin_right = 242.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerName"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Nom :"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerName"]
margin_left = 43.0
margin_right = 242.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 20

[node name="ContainerPosition" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer"]
margin_top = 28.0
margin_right = 242.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition"]
margin_right = 242.0
margin_bottom = 14.0
text = "Position"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
text = "x"

[node name="LineEditx" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer"]
margin_left = 11.0
margin_right = 78.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer"]
margin_left = 82.0
margin_top = 5.0
margin_right = 89.0
margin_bottom = 19.0
text = "y"

[node name="LineEdity" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer"]
margin_left = 93.0
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer"]
margin_left = 164.0
margin_top = 5.0
margin_right = 171.0
margin_bottom = 19.0
text = "z"

[node name="LineEditz" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer"]
margin_left = 175.0
margin_right = 242.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ContainerRotation" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer"]
margin_top = 74.0
margin_right = 242.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation"]
margin_right = 242.0
margin_bottom = 14.0
text = "Rotation"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
text = "x"

[node name="LineEditx" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer"]
margin_left = 11.0
margin_right = 78.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer"]
margin_left = 82.0
margin_top = 5.0
margin_right = 89.0
margin_bottom = 19.0
text = "y"

[node name="LineEdity" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer"]
margin_left = 93.0
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer"]
margin_left = 164.0
margin_top = 5.0
margin_right = 171.0
margin_bottom = 19.0
text = "z"

[node name="LineEditz" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer"]
margin_left = 175.0
margin_right = 242.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ChooseItem" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.5
margin_top = -173.5
margin_right = 208.5
margin_bottom = 173.5
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.tscn" )
show_hidden_files = true
current_dir = "res://Library"
current_file = "Boitier.tscn"
current_path = "res://Library/Boitier.tscn"

[node name="OpenProject" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -173.5
margin_right = 208.0
margin_bottom = 173.5
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.sav" )
current_dir = "res://Saves"
current_file = "save1.sav"
current_path = "res://Saves/save1.sav"

[node name="SaveProject" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -173.5
margin_right = 208.0
margin_bottom = 173.5
resizable = true
filters = PoolStringArray( "*.sav" )
current_dir = "res://Saves"
current_file = "save1.sav"
current_path = "res://Saves/save1.sav"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -161.5
margin_right = 332.0
margin_bottom = 161.5
window_title = "Lier les"

[node name="ScrollContainer" type="ScrollContainer" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
scroll_horizontal_enabled = false
scroll_deadzone = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog/ScrollContainer"]
margin_right = 648.0
margin_bottom = 279.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDialog/ScrollContainer/VBoxContainer"]
margin_right = 648.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="LabelCapteur" type="Label" parent="ConfirmationDialog/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "Capteurs :"

[node name="LabelBit" type="Label" parent="ConfirmationDialog/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 648.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Bit"
align = 2

[node name="Capteurs" type="VBoxContainer" parent="ConfirmationDialog/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 648.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="ConfirmationDialog/ScrollContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 648.0
margin_bottom = 155.0

[node name="LabelActionneur" type="Label" parent="ConfirmationDialog/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 85.0
margin_bottom = 14.0
text = "Actionneurs :"

[node name="LabelBit" type="Label" parent="ConfirmationDialog/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 89.0
margin_right = 648.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Bit"
align = 2

[node name="Actionneurs" type="VBoxContainer" parent="ConfirmationDialog/ScrollContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 648.0
margin_bottom = 279.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/PanelContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/ViewportContainer" to="." method="_on_ViewportContainer_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VBoxContainerLeft/HBoxContainer/ViewportContainer" to="." method="_on_ViewportContainer_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainerRight/ObjectTreeContainer/Button" to="." method="open_choosing_item"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerName/LineEdit" to="." method="_on_change_object_name"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer/LineEditx" to="." method="change_object_position_x"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer/LineEdity" to="." method="change_object_position_y"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerPosition/HBoxContainer/LineEditz" to="." method="change_object_position_z"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer/LineEditx" to="." method="change_object_rotation_x"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer/LineEdity" to="." method="change_object_rotation_y"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/VBoxContainerRight/PanelContainer/Proprietes/VBoxContainer/ContainerRotation/HBoxContainer/LineEditz" to="." method="change_object_rotation_z"]
[connection signal="file_selected" from="ChooseItem" to="." method="_on_ChooseItem_file_selected"]
[connection signal="popup_hide" from="ChooseItem" to="." method="_on_ChooseItem_popup_hide"]
[connection signal="file_selected" from="OpenProject" to="." method="open_project_file"]
[connection signal="file_selected" from="SaveProject" to="." method="_on_SaveProject_file_selected"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="open_simulation_scene"]
